Privacy Policy Page completed (Bug Free). Nav and scroll elemnts all were properly. Text easily readable.

--- a/pages/privacy.css
+++ b/pages/privacy.css
@@ -1,16 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500;700&display=swap');
 
+/* width */
 ::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background: #242836;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #192734;
-}
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 
 * {
 
@@ -20,20 +28,15 @@
 
 }
 
-
 body,html {
-
-    width: 100%;
-    min-height: 100%;
     background-color: #242836;
-    color: black;
-    justify-content: left;
+    height: auto;
+    width: auto;
 
 }
 
 
 .main-header {
-
     width: 100%;
     height: 75px;
     background-color: #181A24;
@@ -52,6 +55,8 @@ body,html {
     padding-right: 100px;
 
 }
+
+
 
 .main-header ul.header-options li {
     display: inline-block;
@@ -98,20 +103,31 @@ a:hover {
 
 
 .card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    /* margin-left: 100px; */
-    height :  min-content;
+    margin-top: 60px;
+    margin-left: 200px;
+    height : 1000px;
     width: 1200px;
     border-radius: 30px;
     background-color: #12172d;
+    justify-content: center;
 
-    padding: 40px 50px 50px 40px;
     border: 1px solid #477eff;
     color: white;
+
+    padding: 40px 50px 50px 40px;
+    color: white;
+}
+
+.text {
+    overflow: auto;
+    overflow-y: scroll;
+    background-color: #12172d;
+    width: 100%;
+    height: 100%;
+}
+
+h1 {
+    text-align: center;
 }
 
 .card .primary-heading {
@@ -131,6 +147,10 @@ a:hover {
     font-size: 1.5em;
     line-height: 1.3em;
     font-weight: 500;
+}
+
+.paragraph-container {
+    padding: 25px 25px;
 }
 
 .bold {
